--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,4 +10,15 @@
   <description>
      Welcome to Tomcat
   </description>
+  
+  <!--  어노테이션으로 바꿈
+  <filter>
+  	<filter-name>characterEncodingFilter</filter-name>
+  	<filter-class>com.example.web.filter.CharacterEncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>characterEncodingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  -->
 </web-app>
